--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@y-celestial/service": "^3.0.7",
+    "bignumber.js": "^9.1.0",
     "inversify": "^6.0.1",
     "pg": "^8.8.0",
     "pg-native": "^3.0.1",
