--- a/backend/aws/cloudformation/template.yaml
+++ b/backend/aws/cloudformation/template.yaml
@@ -688,17 +688,18 @@ Resources:
                 "date": {"type": "string"},
                 "type": {"type": "string", "enum": ["income","expense"]},
                 "descr": {"type": "string"},
-                "amount": {"type": "number", "minimum": 0},
+                "amount": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
                 "former": {
                   "type": "array",
                   "items": {
                     "type": "object",
                     "properties": {
                       "id": {"type": "string"},
-                      "weight": {"type": "number", "minimum": 0},
-                      "amount": {"type": "number", "minimum": 0}
+                      "type": {"type": "string", "enum": ["weight","amount","pct"]},
+                      "value": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
+                      "takeRemainder": {"type": "boolean"}
                     },
-                    "required": ["id"]
+                    "required": ["id","type","value"]
                   }
                 },
                 "latter": {
@@ -707,17 +708,16 @@ Resources:
                     "type": "object",
                     "properties": {
                       "id": {"type": "string"},
-                      "weight": {"type": "number", "minimum": 0},
-                      "amount": {"type": "number", "minimum": 0}
+                      "type": {"type": "string", "enum": ["weight","amount","pct"]},
+                      "value": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
+                      "takeRemainder": {"type": "boolean"}
                     },
-                    "required": ["id"]
+                    "required": ["id","type","value"]
                   }
                 },
-                "formerRemainder": {"type": "string"},
-                "latterRemainder": {"type": "string"},
                 "memo": {"type": "string"}
               },
-              "required": ["date","type","descr","amount","former","latter","formerRemainder","latterRemainder"]
+              "required": ["date","type","descr","amount","former","latter"]
             },
             "putBookBill": {
               "type": "object",
@@ -725,17 +725,18 @@ Resources:
                 "date": {"type": "string"},
                 "type": {"type": "string", "enum": ["income","expense"]},
                 "descr": {"type": "string"},
-                "amount": {"type": "number", "minimum": 0},
+                "amount": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
                 "former": {
                   "type": "array",
                   "items": {
                     "type": "object",
                     "properties": {
                       "id": {"type": "string"},
-                      "weight": {"type": "number", "minimum": 0},
-                      "amount": {"type": "number", "minimum": 0}
+                      "type": {"type": "string"},
+                      "value": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
+                      "takeRemainder": {"type": "boolean"}
                     },
-                    "required": ["id"]
+                    "required": ["id","type","value"]
                   }
                 },
                 "latter": {
@@ -744,17 +745,16 @@ Resources:
                     "type": "object",
                     "properties": {
                       "id": {"type": "string"},
-                      "weight": {"type": "number", "minimum": 0},
-                      "amount": {"type": "number", "minimum": 0}
+                      "type": {"type": "string"},
+                      "value": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
+                      "takeRemainder": {"type": "boolean"}
                     },
-                    "required": ["id"]
+                    "required": ["id","type","value"]
                   }
                 },
-                "formerRemainder": {"type": "string"},
-                "latterRemainder": {"type": "string"},
                 "memo": {"type": "string"}
               },
-              "required": ["date","type","descr","amount","former","latter","formerRemainder","latterRemainder"]
+              "required": ["date","type","descr","amount","former","latter"]
             },
             "postBookMember": {
               "type": "object",
@@ -774,7 +774,7 @@ Resources:
               "type": "object",
               "properties": {
                 "date": {"type": "string"},
-                "amount": {"type": "number", "minimum": 0},
+                "amount": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
                 "srcMemberId": {"type": "string"},
                 "dstMemberId": {"type": "string"},
                 "memo": {"type": "string"}
@@ -785,7 +785,7 @@ Resources:
               "type": "object",
               "properties": {
                 "date": {"type": "string"},
-                "amount": {"type": "number", "minimum": 0},
+                "amount": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
                 "srcMemberId": {"type": "string"},
                 "dstMemberId": {"type": "string"},
                 "memo": {"type": "string"}
