--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,14 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
