--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "@y-celestial/spica-service": "^1.0.4",
+    "autoprefixer": "^10.4.12",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "eslint": "^8.23.1",
@@ -52,9 +53,11 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.31.8",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
   },
   "browserslist": {
