--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/base": "^5.0.0-alpha.101",
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
