--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "fix:format": "npm run lint:format -- --write",
     "lint": "run-s lint:*",
     "fix": "run-s fix:*",
+    "i18n-sync": "i18next-locales-sync -p en -s zh-CN zh-TW jp -l public/locale",
     "clean": "del-cli dist -f",
     "pre:commit": "npm run lint",
     "pre:deploy": "run-s clean build"
@@ -28,9 +29,14 @@
     "bignumber.js": "^9.1.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.8",
+    "i18next-chained-backend": "^3.1.0",
+    "i18next-http-backend": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-i18next": "^11.18.6",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "redux": "^4.2.0",
@@ -54,6 +60,7 @@
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.31.8",
+    "i18next-locales-sync": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
