--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,6 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@y-celestial/service": "^3.0.7",
     "bignumber.js": "^9.1.0",
     "inversify": "^6.0.1",
     "pg": "^8.8.0",
@@ -34,6 +33,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.186",
     "@types/multer": "^1.4.7",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
