--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/base": "^5.0.0-alpha.101",
+    "@mui/base": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.1.3",
@@ -40,6 +40,7 @@
     "react-qr-code": "^2.0.8",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -53,7 +54,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
-    "@y-celestial/spica-service": "^1.0.5",
+    "@y-celestial/spica-service": "^1.0.6",
     "autoprefixer": "^10.4.12",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
