--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "i18next-chained-backend": "^3.1.0",
     "i18next-http-backend": "^1.4.4",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
     "react-i18next": "^11.18.6",
@@ -52,6 +53,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
