--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/base": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.6",
+    "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.1.3",
     "bignumber.js": "^9.1.0",
