--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -5,7 +5,8 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "64x64 32x32 24x24 16x16 192x192"
+      "sizes": "64x64 32x32 24x24 16x16 192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
