--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -11,7 +11,8 @@
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
     }
   ],
   "start_url": "./book",
