--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,61 +3,49 @@
   "name": "Bi-ll",
   "icons": [
     {
-      "src": "logo/icon-72.png",
+      "src": "logo/icon-android-72.png",
       "sizes": "16x16 24x24 32x32 64x64 72x72",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "logo/icon-96.png",
+      "src": "logo/icon-android-96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "logo/icon-120.png",
-      "sizes": "120x120",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "logo/icon-128.png",
+      "src": "logo/icon-android-128.png",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "logo/icon-144.png",
+      "src": "logo/icon-android-144.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "logo/icon-152.png",
+      "src": "logo/icon-android-152.png",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "logo/icon-180.png",
-      "sizes": "180x180",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "logo/icon-192.png",
+      "src": "logo/icon-android-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "logo/icon-384.png",
+      "src": "logo/icon-android-384.png",
       "sizes": "384x384",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "logo/icon-512.png",
+      "src": "logo/icon-android-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
