--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -53,6 +53,6 @@
   ],
   "start_url": "./book",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff"
 }
