change domain name

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Bi-ll",
-  "name": "Bi-ll",
+  "short_name": "Bunny Bill",
+  "name": "Bunny Bill",
   "icons": [
     {
       "src": "logo/icon-android-72.png",
